+checkbox pure css

--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
     </div>
 </div>
 
+    <div class="row" style="padding: 10px">
+        <div class="col-sm-6">
+            <label> Vk</label>
+                <div class="roundedOne" class="form-control">
+                    <input type="checkbox" value="None" id="checkBoxVK" name="check" />
+                    <label for="checkBoxVK"></label>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <label> Instagram</label>
+                <div class="roundedOne" class="form-control">
+                    <input type="checkbox" value="None" id="checkBoxInstagram" name="check" />
+                    <label for="checkBoxInstagram"></label>
+                </div>
+            </div>
+        </div>
+
     <button type="button" class="btn btn-primary btn-lg" id="findGirlsButton">Find</button>
 
 
@@ -127,6 +144,8 @@
             <div class="pswp__item"></div>
             <div class="pswp__item"></div>
         </div>
+
+
 
         <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
         <div class="pswp__ui pswp__ui--hidden">
