--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-sm-6">
             <label> Vk</label>
                 <div class="roundedOne" class="form-control">
-                    <input type="checkbox" value="None" id="checkBoxVK" name="check" />
+                    <input type="checkbox" value="None" id="checkBoxVK" checked name="check" />
                     <label for="checkBoxVK"></label>
                 </div>
             </div>
