split vk\insta +threadi nst

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="/js/libs/rangeslider.min.js"></script>
+    <script src="/js/photoresources/insta.js"></script>
+    <script src="/js/photoresources/vk.js"></script>
     <script src="/js/ApplicationState.js"></script>
     <script src="/js/cookie.js"></script>
     <!-- Latest compiled and minified CSS -->
@@ -195,5 +197,10 @@
         </div>
     </div>
 </div>
+
+<footer>
+    Create by&nbsp;<a href="http://vk.com/babylover">Betka</a>
+</footer>
+
 </html>
 
