fix masonry load image

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <!--FLEX IMAGE GALLERY-->
 <div id="images" class=" flex-images" style=";max-width: 900px;margin: auto"></div>
 <!--END FLEX IMAGE GALLERY-->
-<div class="main" id="container">
+<div class="main" id="container" data-masonry-options='{ "itemSelector": ".item" }'>
 
     <!--GAMMA IMAGE GALLERY-->
 
@@ -232,6 +232,7 @@
 <script src="/js/libs/gamma.js"></script>
 -->
 <script src="/js/libs/masonry.pkgd.min.js"></script>
+<script src="/js/libs/imagesloaded.pkgd.min.js"></script>
 
 <script src="/js/photoresources/insta.js"></script>
 <script src="/js/photoresources/vk.js"></script>
